--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
                     <goals>install</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
@@ -46,7 +47,6 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:8e3Yn4uK/pet-clinic.git</developerConnection>
-      <tag>pet-clinic-0.0.1</tag>
   </scm>
 
 </project>
