--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.oko</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>pet-clinic</name>
     <description>Pet Clinic Project</description>
 
@@ -46,7 +46,8 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:8e3Yn4uK/pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/8e3Yn4uK/pet-clinic.git</developerConnection>
+    <tag>HEAD</tag>
   </scm>
 
 </project>
