--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.oko</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <name>pet-clinic</name>
     <description>Pet Clinic Project</description>
 
@@ -47,7 +47,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/8e3Yn4uK/pet-clinic.git</developerConnection>
-    <tag>pet-clinic-0.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
 </project>
